--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     title: "Naruto",
                     synopsis: "Naruto Uzumaki, um jovem ninja órfão com o demônio de Nove Caudas selado dentro dele, busca reconhecimento em sua vila e sonha em se tornar Hokage.",
                     image: "https://i.postimg.cc/DfNBgLMv/00-33-46-images.jpg",
-                    link: "https://animeigeek.github.io/anime-mono1/"
+                    link: "https://animeigeek.github.io/Naruto-/"
                 },
                 {
                     title: "One Piece",
