--- a/index.html
+++ b/index.html
@@ -298,7 +298,13 @@
                     title: "Attack on Titan",
                     synopsis: "Eren Yeager e seus amigos lutam contra titãs gigantes que ameaçam a humanidade, enquanto descobrem segredos sombrios sobre seu mundo.",
                     image: "https://i.postimg.cc/DfNBgLMv/00-33-46-images.jpg", // Placeholder
-                    link: "https://animeigeek.github.io/anime-mono3/" // Placeholder
+                    link: "https://animeigeek.github.io/anime-mono3/" // Placeholde
+                                    },
+                {
+                    title: "Solo Leveng 1 temporada",
+                    synopsis: "Sung Jin-Woo, o caçador mais fraco da humanidade, ganha uma segunda chance ao despertar um misterioso sistema que o torna cada vez mais forte. Em um mundo cheio de monstros e perigos, ele inicia sua jornada rumo ao poder absoluto.",
+                    image: "https://i.postimg.cc/6QrdsWCw/1354446-1.jpg", // Placeholder
+                    link: "https://animeigeek.github.io/Solo-Leveling-1-Temporada-/" // Placeholderr
                 }
             ];
 
